--- a/lang/en.json
+++ b/lang/en.json
@@ -1,6 +1,9 @@
 {
-    "example": {
-        "title": "Travel at the lowest price and make friends at every destination"
+    "Prueba1": {
+        "title": "Test page 1, wow, why are you checking the commits?"
+    },
+    "home": {
+        "welcome": "Welcome to Next.js"
     }
 }
 
