--- a/lang/es.json
+++ b/lang/es.json
@@ -2,7 +2,7 @@
     "Prueba1": {
         "title": "Paguina de prueba 1 , wey por que estas chquendo los commits?"
     },
-    "home": {
+    "index": {
         "welcome": "Bienvenido a Next.js"
     }
 }
