Se cambio el titulo, descripcion y nuevas funcione

--- a/lang/en.json
+++ b/lang/en.json
@@ -3,7 +3,10 @@
         "title": "Test page 1, wow, why are you checking the commits?"
     },
     "index": {
-        "welcome": "Welcome to Next.js"
+        "titulo": "Find friends in each destination",
+        "Nuestras_Funciones": "Our new features.",
+        "Ganas_De": "Do you want to see new places, but don't have anyone with you? Meet someone to accompany you on your adventure.",
+        "Nmad_Te": "Nmad offers you unforgettable experiences on a low budget."
     }
 }
 
