--- a/lang/es.json
+++ b/lang/es.json
@@ -3,6 +3,9 @@
         "title": "Paguina de prueba 1 , wey por que estas chquendo los commits?"
     },
     "index": {
-        "welcome": "Bienvenido a Next.js"
+        "titulo": "Encuentra amigos en cada destino",
+        "Nuestras_Funciones": "Nuestras funciones nuevas.",
+        "Ganas_De": "¿Ganas de conocer lugares nuevos, pero no tienes con quien? Conoce a alguien que te acompañe en tu aventura.",
+        "Nmad_Te": "Nmad te ofrece experiencias inolvidables con bajo presupuesto."
     }
 }
