cambio en los idiomas

--- a/lang/es.json
+++ b/lang/es.json
@@ -6,6 +6,10 @@
         "titulo": "Encuentra amigos en cada destino",
         "Nuestras_Funciones": "Nuestras funciones nuevas.",
         "Ganas_De": "¿Ganas de conocer lugares nuevos, pero no tienes con quien? Conoce a alguien que te acompañe en tu aventura.",
-        "Nmad_Te": "Nmad te ofrece experiencias inolvidables con bajo presupuesto."
+        "Nmad_Te": "Nmad te ofrece experiencias inolvidables con bajo presupuesto.",
+        "Leer_mas": "Leer más."
+
     }
+    
+
 }
