--- a/lang/es.json
+++ b/lang/es.json
@@ -7,5 +7,9 @@
         "Nuestras_Funciones": "Nuestras funciones nuevas.",
         "Ganas_De": "¿Ganas de conocer lugares nuevos, pero no tienes con quien? Conoce a alguien que te acompañe en tu aventura.",
         "Nmad_Te": "Nmad te ofrece experiencias inolvidables con bajo presupuesto."
+    },
+    "LoginBtn": {
+        "inicio": "Inicio",
+        "iniciar": "Ingresar con Google"
     }
 }
